# diet-mate

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py  settings.py
src/api/: app.py
src/api/handlers/: achievements.py  daily_summary.py  generate_ai_report.py  last_ai_report.py  periodic_summary.py  user_report.py  weight_history.py
src/api/routers/: achievements.py  analytics.py  nutrition.py  users.py
src/api/schemas/: achievements.py  ai_report.py  daily_summary.py  periodic_summary.py  weight_history.py
src/bot/: bot.py
src/bot/handlers/: diary_handler.py  input_handlers.py  profile_handler.py  start_handler.py
src/bot/keyboards/: inline.py  reply.py
src/bot/middlewares/: user_check.py
src/bot/states/: user_nutrition.py  user_profile.py
src/models/: achievement.py  user.py  user_achievement.py  user_food_log.py  user_nutrition.py  user_profile.py  user_report.py  user_weight_history.py
src/services/db/: achievement_repository.py  database.py  user_achievement_repository.py  user_food_log_repository.py  user_nutrition_repository.py  user_profile_repository.py  user_report_repository.py  user_repository.py  user_weight_history_repository.py
src/services/logic/: achievement_checks.py  achievements_service.py  ai_report_service.py  chat_gpt_service.py  daily_intake_service.py  nutrition_calculation_service.py  nutrition_service.py  user_food_log_service.py  user_service.py  user_weight_history_service.py
src/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  main.tsx  (+2 more)
(+7 files in other folders)
